[metadata]
name = graft
version = 0.0.2
description = A bit like raft.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = raft, consensus, distributed
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/chrizzFTD/graft
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires = immutables

[options.extras_require]
docs = sphinx_autodoc_typehints; sphinx_rtd_theme
